NOJIRA hierarchy align repository conventions (#46)